--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "encrypt-storage": "^2.12.12",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
